@@ -26,7 +26,6 @@
 # bcld.audio.use_combined_sink=(0-1)
 #
 # (NETWORK)
-# bcld.realtek.driver=(r8168)
 # bcld.wifi.eap.auth=(mschap, mschapv2)
 # bcld.wifi.eap.method=(ttls, peap, tls)
 # bcld.wifi.eap.password=(BASE64 PASSWORD)
