@@ -1,18 +1,18 @@
 a58107076e3e9ed3c5dea007a74cf13d  ./.github/workflows/release.yml
 b184bc47daaff1fae8e5341c88ff93e6  ./.gitignore
 4a6fa59b1c01aecca6b7504953723f01  ./.gitmodules
-c55e1bbadd6547242e49f536e8bb0062  ./CHANGELOG
+efcfd0ecc46be4787aa87419a0012e8f  ./CHANGELOG
 04aff3cce210e9c2a8f21df593f07b19  ./COPYING.eupl
 5f630c45a220e988d7c6cb643575f3a0  ./Docker-builder.sh
 d221c605820660f1d244c6213e28d08b  ./IMG-builder.sh
 f989130a6074ceca51514421f336a6fe  ./ISO-builder.sh
 cc04d3c28306689fde5be96638e22f70  ./LICENSE.eupl
-9a955786be74027cf2abfc8b9710e387  ./README.md
+8f22c4649090a344ec91280e408ec41e  ./README.md
 a0a5e979c07ce819ed03618daa29316a  ./RepoMan.sh
 53712c37e5d406d6e2396d0133c63e0a  ./assets/BCLD_FLOW.png
 b70ef6c6e2ba24acef78d533b2bca185  ./assets/ISO_BUILDER_FLOW.png
 5ee37144e15f8bf49e7f683935a27f15  ./assets/bcld-logo.png
-c4d70702bb5e587da1e17ac1a7f70ef4  ./config/BUILD.conf
+cafbd6bb38b851c2fdb1022a6022d5af  ./config/BUILD.conf
 9cba1a18fda70d1aa9ea3de9c7572d3e  ./config/X11/Xbindkeys/.xbindkeysrc
 50dd37371765f9cc60f1ff44b21c7647  ./config/X11/Xmodmap/.Xmodmap
 5bd6e2b4f3d441147adffa8bb288b1ea  ./config/X11/xorg.conf.d/20-intel.conf
@@ -22,8 +22,8 @@ cfc9284e73df9db03f57d490adfa71a2  ./config/X11/xorg.conf.test/99-bcld-disable-ki
 8b637a6c1eb44c49740a1a2d569fe4ad  ./config/X11/xterm/XTerm.black
 9f5fd90d71fcba2be63627e80f5f7392  ./config/X11/xterm/XTerm.white
 3b817e042342ec45513275941356c821  ./config/apt/sources.list
-96118326a47f2ce117c668bdf25c726d  ./config/bash/environment
-751c3f326e9d9febc14ef0f884b61087  ./config/bcld/bcld.cfg
+4907bbd6ce265d75f292fb293d7b2c7a  ./config/bash/environment
+bbf802787ee72f889c9c75b07629d580  ./config/bcld/bcld.cfg
 1b98525005b32bb69b3ab90e213c6492  ./config/casper/casper.conf
 d41d8cd98f00b204e9800998ecf8427e  ./config/grub/.disk/base_installable
 7744f57495e19ee51aa0d9ec66e3fb2d  ./config/grub/.disk/casper-uuid-generic
@@ -99,7 +99,7 @@ df6732bf6b392a7cc69200bd58fb31b9  ./script/crosdump_logger.sh
 6016a0192dc8975287b1bdf97c846b7a  ./script/file_operations.sh
 6257ca5ef1f37f5a08322cc9a08e61b3  ./script/log_tools.sh
 a0ad3b8dcdd06327c49632ade4f76658  ./script/rsyslogger.sh
-d7fd35da3fc64d786ff28ee29846acd2  ./script/startup.sh
+1131f68e8bc7174637352a8ceec64118  ./script/startup.sh
 433a2f4f80224f7c115b47a656b7c57c  ./script/usb_logger.sh
 b4040c7360fa596caf4232310b156ba3  ./test/00_BCLD-BUILD.bats
 cdb9703f21c79faa1eae03f7c28a7cca  ./test/BCLD-BATS.sh
