@@ -1,1 +1,1 @@
-bdd24ce04356ec3f5a69316f7597b9e9  ./test/bcld.md5
+6ae6fc532b969e0d1ed5487e332b319a  ./test/bcld.md5
